[tool.poetry]
name = "stats-bg"
version = "1.0.0"
description = ""
authors = ["Guilherme Noronha <guilhermenoronha2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.2"
python-decouple = "3.8"
selenium = "4.10.0"
dbt-postgres = "1.6.1"
numpy = "1.26.4"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
